--- a/pkg/generate/Dockerfile.tmpl
+++ b/pkg/generate/Dockerfile.tmpl
@@ -1,5 +1,3 @@
 FROM scratch
 COPY {{.SpinManifest}} ./spin.toml
-{{range .Sources}}
-COPY {{.}} ./{{.}}
-{{end}}
+{{range .Sources}}COPY {{.Relative}} ./{{.Path}}{{end}}
