--- a/pkg/generate/Dockerfile.tmpl
+++ b/pkg/generate/Dockerfile.tmpl
@@ -1,3 +1,6 @@
 FROM scratch
 COPY {{.SpinManifest}} ./spin.toml
+{{- if .RuntimeConfig}}
+COPY {{.RuntimeConfig}} ./spin-config.toml
+{{- end}}
 {{range .Sources}}COPY {{.Relative}} ./{{.Path}}{{end}}
